--- a/base/en-US.html
+++ b/base/en-US.html
@@ -9,7 +9,7 @@
             Adaptive Mobile-Tablet-PC
             Basic Static Website Template
         </title>
-        <!-- version "1.4.9.11 build 20171017.212444" -->
+        <!-- version "1.5.0.3 build 20180228.200813" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -271,7 +271,7 @@
                     <h3 class="text-center text-info">
                         <span class="glyphicon glyphicon-th-large"></span>
                         <b>
-                            Company Profile
+                            Community Profile
                         </b>
                     </h3>
                     <p></p>
@@ -288,29 +288,21 @@
                     <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                 </div>
             </div>
+            <p></p>
             <div class="row">
                 <div class="col-md-8">
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
-                        <p></p>
                         <p style="text-indent:2em;">
-                            <a target="_blank" href="http://dts.digitser.cn/en-US.html">
-                                <b>
-                                    China Guangzhou Digits Cloud Technology Co., Ltd.
-                                </b>
-                            </a>
-                            is "China Guangzhou Digitser Machinery Co., Ltd." IT Division.
-                        </p>
-                        <p style="text-indent:2em;">
-                            We not only produce hardware, but also produce software, can provide you with the complete "Industry 4.0" mature digital solutions. Maximize the efficiency of the full life cycle of enterprise products, significantly reduce operating costs, breaking your imagination with independent innovation.
+                            We not only produce hardware, but also produce software, can provide you with the complete "Industry 4.0, Big Data" mature digital solutions. Maximize the efficiency of the full life cycle of enterprise products, significantly reduce operating costs, breaking your imagination with independent innovation.
                         </p>
                         <p style="text-indent:2em;">
                             Meet
-                            <a target="_blank" href="http://www.digitser.net/en-US.html">
+                            <a target="_blank" href="http://dts.digitser.cn/en-US.html">
                                 <b>
-                                    "China Guangzhou Digitser Machinery Co., Ltd."
+                                    "Digits Cloud Community"
                                 </b>
                             </a>
-                            needs at the same time, to provide industry 4.0 digital, IT, big data, PLM, ERP, comprehensive technical information, electrical automation services for others.
+                            needs at the same time, to provide "Industry 4.0" digital, IT, big data, PLM, ERP, comprehensive technical information, electrical automation services for others.
                         </p>
                         <p></p>
                         <hr style="margin:0;border:0;border-top:1px dashed #eee;">
