--- a/orange-red/zh-TW.html
+++ b/orange-red/zh-TW.html
@@ -9,7 +9,7 @@
             自適應手機-平闆-PC
             橙紅靜態網站模闆
         </title>
-        <!-- version "1.4.9.3 build 20171017.212444" -->
+        <!-- version "1.5.0.1 build 20180228.200314" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -271,7 +271,7 @@
                     <h3 class="text-center text-info">
                         <span class="glyphicon glyphicon-th-large"></span>
                         <b>
-                            公司簡介
+                            社區簡介
                         </b>
                     </h3>
                     <p></p>
@@ -288,29 +288,21 @@
                     <hr style="margin:0;border:0;border-top:1px dashed #eee;">
                 </div>
             </div>
+            <p></p>
             <div class="row">
                 <div class="col-md-8">
                     <div class="thumbnail" style="font-family:'微软雅黑';padding:2px 0;border:1px solid #fff;">
-                        <p></p>
                         <p style="text-indent:2em;">
-                            <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
-                                <b>
-                                    廣州市德雲數科技有限公司
-                                </b>
-                            </a>
-                            為 "廣州市德數機械設備有限公司" 的 IT 事業部。
-                        </p>
-                        <p style="text-indent:2em;">
-                            我們不但生産硬件，還生産軟件，能為您提供整套 "工業4.0" 成熟數字化解決方案。最大限度提高企業産品的全生命周期運轉效率，大幅降低運營成本，以自主創新突破您的想像。
+                            我們不但生産硬件，還生産軟件，能為您提供整套 "工業4.0 大數據" 成熟數字化解決方案。最大限度提高企業産品的全生命周期運轉效率，大幅降低運營成本，以自主創新突破您的想像。
                         </p>
                         <p style="text-indent:2em;">
                             在滿足
-                            <a target="_blank" href="http://www.digitser.net/zh-TW.html">
+                            <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
                                 <b>
-                                    "廣州市德數機械設備有限公司"
+                                    "德雲社區"
                                 </b>
                             </a>
-                            需求的同時，嚮外提供工業4.0數字化、IT、大數據、PLM、ERP、綜閤技術資訊、電氣自動化服務。
+                            需求的同時，嚮外提供 "工業4.0" 數字化、IT、大數據、PLM、ERP、綜閤技術資訊、電氣自動化服務。
                         </p>
                         <p></p>
                         <hr style="margin:0;border:0;border-top:1px dashed #eee;">
