--- a/orange-red/zh-CN/about.html
+++ b/orange-red/zh-CN/about.html
@@ -232,7 +232,7 @@
                     <h3 class="text-center text-info">
                         <span class="glyphicon glyphicon-th-large"></span>
                         <b>
-                            公司简介
+                            社区简介
                         </b>
                     </h3>
                     <p></p>
